Fixed mobile contact overflow bug

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -79,7 +79,7 @@
     }
 
     .boxes {
-      .div {
+      div {
         font-size: 1rem;
       }
     }
